# chameleon-engine

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
benches/: perft.rs
src/: bitboard.rs  board.rs  castling.rs  evaluation.rs  history.rs  lib.rs  main.rs  move.rs  move_generator.rs  movelist.rs  piece.rs  search.rs  square.rs  transposition_table.rs  uci.rs  zob_hash.rs
