[package]
name = "chameleon"
version = "1.1.0"
authors = ["Aloïs RAUTUREAU"]
edition = "2021"
description = "A toy-project chess engine"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.0"
regex = "1"
mimalloc = { version = "*", default-features = false }
rand = "0.8.5"

[build-dependencies]
rand_mt = "4.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "perft"
harness = false

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
debug = 1
incremental = true
overflow-checks = false
